# auth-login-signup-service

./: .env.example  .gitignore  Dockerfile  INFRASTRUCTURE.md  README.md  check_grafana_token.py  cleanup.ps1  docker-compose.prod.yml  docker-compose.yml  init_db.py  init_db.sql  init_rds_db.py  init_rds_direct.py  pyproject.toml  requirements.txt  setup_rds_access.sql  test_db_connection.py  test_grafana_connection.py
.github/workflows/: ci.yml  deploy-ec2.yml
app/: main.py
app/api/routes/: auth.py
app/core/: config.py  events.py  security.py
app/db/: database.py  init_db.py
app/models/: user.py
app/repositories/: user_repository.py
app/schemas/: user.py
app/services/: auth_service.py  email_service.py  metric_service.py  metrics_service.py
scripts/: init_rds.sql
terraform-ec2-new/: README.md  README_CUENTA_FEDERADA.md  associate_eip.ps1  database.tf  ecs.tf  elastic_ip.tf  main.tf  set-aws-credentials.example.ps1  set-aws-credentials.ps1  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform-ec2-new/lambda_code/: index.js  package.json
tests/: conftest.py  test_auth.py
