[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auth-login-signup-service"
version = "0.1.0"
description = "Authentication microservice with FastAPI, PostgreSQL, and Kafka"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Tu Nombre", email = "tu@email.com"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.11.2",
    "psycopg2-binary>=2.9.6",
    "asyncpg>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "loguru>=0.7.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "slowapi>=0.1.7",
    "aiokafka>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.1",
    "ruff>=0.0.270",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
package-dir = { "" = "." }
packages = find:

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I"]
fixable = ["ALL"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
